@@ -26,10 +26,10 @@ build_requires();
 
 requires(
     'Carp'           => 0,
+    'Exporter::Lite'  => 0,
     'File::Share'    => 0,
     'File::ShareDir' => 0,
     'Storable'       => 0,
-    'Sub::Exporter'  => 0,
     'version'        => 0.77,
 );
 
